unpackaged/main/default/objects/WF_Api_Settings__c/WF_Api_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Wells Fargo API Settings</label>
</CustomObject>