unpackaged/main/default/objects/WF_Api_Settings__c/fields/API_TimeOut__c.field-meta.xml
<CustomField>
    <fullName>API_TimeOut__c</fullName>
    <defaultValue>120000</defaultValue>
    <description>Change this value ONLY FOR TEST PURPOSES, otherwise the value should be 120000</description>
    <inlineHelpText>Change this value ONLY FOR TEST PURPOSES, otherwise the value should be 120000</inlineHelpText>
    <label>API TimeOut</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>