unpackaged/main/default/objects/WF_Api_Settings__c/fields/Create_Reversal_Payment_for_Late_Returns__c.field-meta.xml
<CustomField>
    <fullName>Create_Reversal_Payment_for_Late_Returns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Reversal Payment for Late Returns</label>
    <type>Checkbox</type>
</CustomField>