unpackaged/main/default/objects/WF_Api_Settings__c/fields/Days_Back_Retrieve_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Days_Back_Retrieve_Notifications__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Determine how many days back the system should check for Notifications. Default is 5</description>
    <inlineHelpText>Determine how many days back the system should check for Notifications. Default is 5</inlineHelpText>
    <label>Days Back to Retrieve Notifications</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>