unpackaged/main/default/objects/WF_Api_Settings__c/fields/Disable_Webhook__c.field-meta.xml
<CustomField>
    <fullName>Disable_Webhook__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>*** WARNING; USE ONLY FOR TEST ** This will disable the webhook endpoint, notifications from Wells Fargo will not be processed</inlineHelpText>
    <label>Disable Webhook</label>
    <type>Checkbox</type>
</CustomField>