unpackaged/main/default/objects/WF_Api_Settings__c/fields/Error_Codes_To_Resubmit_Request__c.field-meta.xml
<CustomField>
    <fullName>Error_Codes_To_Resubmit_Request__c</fullName>
    <description>List of error codes to resubmit request separated by a semicolon.</description>
    <inlineHelpText>List of error codes to resubmit request separated by a semicolon.</inlineHelpText>
    <label>Resubmission Error Codes</label>
    <type>TextArea</type>
</CustomField>