unpackaged/main/default/objects/WF_Api_Settings__c/fields/Gateway_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Entity_Id__c</fullName>
    <label>Gateway Entity Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>