unpackaged/main/default/objects/WF_Api_Settings__c/fields/Max_Number_of_attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_attempts__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Max number of attempts when sending payments/disbursements to WellsFargo API.</description>
    <inlineHelpText>Max number of attempts when sending payments/disbursements to WellsFargo API.</inlineHelpText>
    <label>Resubmission Max # of attempts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>