unpackaged/main/default/objects/WF_Api_Settings__c/fields/Next_Resubmission_Attempt_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Next_Resubmission_Attempt_Minutes__c</fullName>
    <defaultValue>10</defaultValue>
    <description>If a batch fails and there is a resubmission based on the settings, we will use this value to schedule the failed records and re-process again.</description>
    <inlineHelpText>If a batch fails and there is a resubmission based on the settings, we will use this value to schedule the failed records and re-process again.</inlineHelpText>
    <label>Next Resubmission Attempt (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>