unpackaged/main/default/objects/WF_Api_Settings__c/fields/Pre_Pending_Payments_in_Settlement_Delay__c.field-meta.xml
<CustomField>
    <fullName>Pre_Pending_Payments_in_Settlement_Delay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, payments with a status of “Pre-Pending” will also be included in the settlement delay. If false, only payments with a status of “Pending” will be included in the settlement delay.</description>
    <inlineHelpText>If true, payments with a status of “Pre-Pending” will also be included in the settlement delay. If false, only payments with a status of “Pending” will be included in the settlement delay.</inlineHelpText>
    <label>Pre-Pending Payments in Settlement Delay</label>
    <type>Checkbox</type>
</CustomField>