unpackaged/main/default/objects/WF_Api_Settings__c/fields/Pre_Pending_Update_Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Pre_Pending_Update_Max_Attempts__c</fullName>
    <label>Pre Pending Update Max Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>