unpackaged/main/default/objects/WF_Api_Settings__c/fields/Production_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Production_Certificate_Name__c</fullName>
    <label>Production Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>