unpackaged/main/default/objects/WF_Api_Settings__c/fields/Save_Communication_Logs__c.field-meta.xml
<CustomField>
    <fullName>Save_Communication_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Communication Logs</label>
    <type>Checkbox</type>
</CustomField>