unpackaged/main/default/objects/WF_Api_Settings__c/fields/Staging_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Staging_Certificate_Name__c</fullName>
    <label>Staging Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>