unpackaged/main/default/objects/WF_Api_Settings__c/fields/WellsFargo_Max_Number_Records_Per_Batch__c.field-meta.xml
<CustomField>
    <fullName>WellsFargo_Max_Number_Records_Per_Batch__c</fullName>
    <defaultValue>300</defaultValue>
    <description>The total number of records WellsFargo can process in a single batch. If the limit is reached, the remaining records of the batch will be processed later.</description>
    <inlineHelpText>The total number of records WellsFargo can process in a single batch. If the limit is reached, the remaining records of the batch will be processed later.</inlineHelpText>
    <label>WellsFargo Max N# Records Per Batch</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>