unpackaged/main/default/objects/WF_Api_Settings__c/fields/WF_Batch_Scope__c.field-meta.xml
<CustomField>
    <fullName>WF_Batch_Scope__c</fullName>
    <defaultValue>50</defaultValue>
    <description>The total number of records processed on each batch scope. For example, if we have 1000 payments to send to WellsFargo, if we set this value to 50, we will have 20 batches.</description>
    <inlineHelpText>The total number of records processed on each batch scope. For example, if we have 1000 payments to send to WellsFargo, if we set this value to 50, we will have 20 batches.</inlineHelpText>
    <label>WF Batch Scope</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>