unpackaged/main/default/objects/WF_Api_Settings__c/fields/WF_CHECK_NOTIFICATIONS_URL__c.field-meta.xml
<CustomField>
    <fullName>WF_CHECK_NOTIFICATIONS_URL__c</fullName>
    <label>WF CHECK NOTIFICATIONS URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>