unpackaged/main/default/objects/WF_Api_Settings__c/fields/WF_COMPANY_ID__c.field-meta.xml
<CustomField>
    <fullName>WF_COMPANY_ID__c</fullName>
    <description>Wells Fargo API Company ID</description>
    <inlineHelpText>Wells Fargo API Company ID</inlineHelpText>
    <label>WF COMPANY ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>