unpackaged/main/default/objects/WF_Api_Settings__c/fields/WF_CONSUMER_KEY__c.field-meta.xml
<CustomField>
    <fullName>WF_CONSUMER_KEY__c</fullName>
    <description>Wells Fargo API Consumer Key.</description>
    <inlineHelpText>Wells Fargo API Consumer Key.</inlineHelpText>
    <label>WF CONSUMER KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>