unpackaged/main/default/objects/WF_Api_Settings__c/fields/WF_CONSUMER_SECRET__c.field-meta.xml
<CustomField>
    <fullName>WF_CONSUMER_SECRET__c</fullName>
    <description>Wells Fargo API Consumer Secret</description>
    <inlineHelpText>Wells Fargo API Consumer Secret</inlineHelpText>
    <label>WF CONSUMER SECRET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>