unpackaged/main/default/objects/WF_Api_Settings__c/fields/WF_DELAYS_DAYS__c.field-meta.xml
<CustomField>
    <fullName>WF_DELAYS_DAYS__c</fullName>
    <label>WF DELAYS DAYS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>