unpackaged/main/default/objects/WF_Api_Settings__c/fields/WF_PAYMENTS_CHECK_STATUS_URL__c.field-meta.xml
<CustomField>
    <fullName>WF_PAYMENTS_CHECK_STATUS_URL__c</fullName>
    <description>Check individual ACH payment status</description>
    <inlineHelpText>Check individual ACH payment status</inlineHelpText>
    <label>WF PAYMENTS CHECK STATUS URL</label>
    <type>Url</type>
</CustomField>