unpackaged/main/default/objects/WF_Api_Settings__c/fields/WF_PAYMENTS_CHECK_URL__c.field-meta.xml
<CustomField>
    <fullName>WF_PAYMENTS_CHECK_URL__c</fullName>
    <description>URL of Wells Fargo API to check the payment status.</description>
    <inlineHelpText>URL of Wells Fargo API to check the payment status.</inlineHelpText>
    <label>WF PAYMENTS CHECK URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>