unpackaged/main/default/objects/WF_Api_Settings__c/fields/WF_PAYMENTS_CREATE_URL__c.field-meta.xml
<CustomField>
    <fullName>WF_PAYMENTS_CREATE_URL__c</fullName>
    <description>URL of Wells Fargo API to create payment.</description>
    <inlineHelpText>URL of Wells Fargo API to create payment.</inlineHelpText>
    <label>WF PAYMENTS CREATE URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>