unpackaged/main/default/objects/WF_Api_Settings__c/fields/WF_TOKEN_URL__c.field-meta.xml
<CustomField>
    <fullName>WF_TOKEN_URL__c</fullName>
    <description>URL of Wells Fargo API to get access token.</description>
    <inlineHelpText>URL of Wells Fargo API to get access token.</inlineHelpText>
    <label>WF TOKEN URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>